Changes since 1.0-beta10:
 - added accelerator buttons to configuration dialog
 - removed fullscreen option in Windows (it never worked properly)