@@ -30,6 +30,12 @@ public:
     void write(void const *buf, size_t len, bool reliable);
     ssize_t read(void *buf, size_t len);
 
+    void clear_stats();
+    size_t get_bytes_sent() { return bytes_sent; }
+    size_t get_bytes_received() { return bytes_received; }
+    size_t get_packets_sent() { return packets_sent; }
+    size_t get_packets_received() { return packets_received; }
+
 protected:
     /* reads the next available packet from the stream buffer (if any) */
     ssize_t next_stream_packet(void *buf, size_t buf_len);
@@ -40,6 +46,8 @@ private:
 
     unsigned char stream_buf[4096];
     size_t stream_pos;
+
+    size_t bytes_sent, bytes_received, packets_sent, packets_received;
 };
 
 #endif /* ndef CLIENT_SOCKET_H_INCLUDED */
