@@ -1,3 +1,4 @@
 Changes since 1.0-beta10:
- - added accelerator buttons to configuration dialog
+ - added accelerator buttons to configuration dialog (requires FLTK 1.3!)
  - removed fullscreen option in Windows (it never worked properly)
+ - client displays data traffic (useful for network debugging)
